Thu Oct 18 10:22:21 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: TODO removed, ROADMAP added.

	* configure.in: Old things for version.h removed.

	* Alot of code cleanup, removed various comments, and fixed code
	with warnings, etc...

Wed Oct 17 17:19:29 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: Removed.

	* ROADMAP: Added.

Wed Oct 17 15:53:40 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: tons of grammar fixes and updates to the Catalan translation.

Tue Oct 16 14:55:22 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Translation fixes.

	* README: Updated a bit.

Tue Oct 16 13:48:00 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: really commit po/ fixes.

Fri Oct 12 13:45:53 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: added new releases and dates.

Fri Oct 12 09:36:25 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: Added some more.

	* src/color: c_structs[], changed order of color_grey and
	color_white.

Thu Oct 11 16:56:36 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: Added some things, and removed some other things :)

Wed Oct 10 18:22:53 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: reformatted this, and added some things after some
	research on old versions.
	* ChangeLog: added a missing chunk from before March 1999.
	* VERSION: removed, it's worthless and it's not getting updated.

Wed Oct 10 16:52:38 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c: renamed Connection Wizard menu entry.
	
	* configure.in: fixed things so po/ works again.
	
	* po/es.po: updated.

Wed Oct 10 16:17:35 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/Makefile.am: dialog.c deleted.
	
	* src/dialog.c: Removed.

	* src/init.c: Removed README and AUTHORS menu.

Wed Oct 10 15:54:01 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated release info for 0.8.0.
