@@ -1,3 +1,8 @@
+Thu Oct 18 14:38:10 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/net.c [open_connection]: A little fix when not entering a 
+	port.
+
 Thu Oct 18 10:22:21 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>
 
 	* Makefile.am: TODO removed, ROADMAP added.
